@@ -298,8 +298,26 @@ $properties = array(
         'value' => '',
     ),
     array(
+        'name' => 'tplOperator',
+        'desc' => 'An optional operator to use for the tplCondition when comparing against the conditionalTpls operands. Default is == (equals).',
+        'type' => 'list',
+        'options' => array(
+            array('text' => 'is equal to','value' => '=='),
+            array('text' => 'is not equal to','value' => '!='),
+            array('text' => 'less than','value' => '<'),
+            array('text' => 'less than or equal to','value' => '<='),
+            array('text' => 'greater than or equal to','value' => '>='),
+            array('text' => 'is empty','value' => 'empty'),
+            array('text' => 'is not empty','value' => '!empty'),
+            array('text' => 'is null','value' => 'null'),
+            array('text' => 'is in array','value' => 'inarray'),
+            array('text' => 'is between','value' => 'between'),
+        ),
+        'value' => '==',
+    ),
+    array(
         'name' => 'conditionalTpls',
-        'desc' => 'A JSON map of conditional operators and tpls to compare against the tplCondition property.',
+        'desc' => 'A JSON map of conditional operands and tpls to compare against the tplCondition property using the specified tplOperator.',
         'type' => 'textfield',
         'options' => '',
         'value' => '',
